@@ -1,10 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/libpq-7.3.21.ebuild,v 1.3 2008/01/14 01:14:51 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/libpq-7.3.21.ebuild,v 1.4 2008/01/14 16:35:09 jer Exp $
 
 inherit eutils gnuconfig flag-o-matic toolchain-funcs
 
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ppc64 ~s390 ~sh ~sparc x86"
+KEYWORDS="~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ppc64 ~s390 ~sh ~sparc x86"
 
 DESCRIPTION="PostgreSQL libraries."
 HOMEPAGE="http://www.postgresql.org/"
