@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.362 2008/01/14 15:35:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.363 2008/01/14 16:35:59 jer Exp $
+
+  14 Jan 2008; Jeroen Roovers <jer@gentoo.org> postgresql-7.3.21.ebuild:
+  Stable for HPPA (bug #204760).
 
   14 Jan 2008; Jeroen Roovers <jer@gentoo.org> postgresql-7.4.19.ebuild:
   Stable for HPPA (bug #204760).
