@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libpq
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.135 2008/01/14 15:34:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.136 2008/01/14 16:35:09 jer Exp $
+
+  14 Jan 2008; Jeroen Roovers <jer@gentoo.org> libpq-7.3.21.ebuild:
+  Stable for HPPA (bug #204760).
 
   14 Jan 2008; Jeroen Roovers <jer@gentoo.org> libpq-7.4.19.ebuild:
   Stable for HPPA (bug #204760).
